[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Enemies/slm.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/RealSlime.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemies/EffectFSM.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 9.96446, 14.1444 )

[sub_resource type="Animation" id=53]
resource_name = "Attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../RealSlime/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=54]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../RealSlime/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../RealSlime/CollisionShape2D:shape:extents:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 7.00669, -0.25, 0, 0.25, 0, 7.00669, -0.25, 0, 0.25, 0, 5.4157, -0.25, 0, 0.25, 0, 2.98502, -0.25, 0, 0.25, 0, 1.48242, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../RealSlime/CollisionShape2D:shape:extents:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 11.0295, -0.25, 0, 0.25, 0, 9.04076, -0.25, 0, 0.25, 0, 12.5321, -0.25, 0, 0.25, 0, 12.5321, -0.25, 0, 0.25, 0, 8.55462, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../RealSlime/CollisionShape2D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -0.54567, -0.25, 0, 0.25, 0, -0.54567, -0.25, 0, 0.25, 0, 0.0730495, -0.25, 0, 0.25, 0, 0.0288563, -0.25, 0, 0.25, 0, -1.03181, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../RealSlime/CollisionShape2D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2.59099, -0.25, 0, 0.25, 0, 5.02167, -0.25, 0, 0.25, 0, 6.52427, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 )
}

[sub_resource type="Animation" id=55]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../RealSlime/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=56]
radius = 18.1442

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 7, 3 )

[node name="RealSlime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.794601, -15.7595 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.116501, -10.2568 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 53 )
anims/Dead = SubResource( 54 )
anims/idle = SubResource( 55 )

[node name="area_check" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_check"]
self_modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
shape = SubResource( 56 )

[node name="top_checker" type="Area2D" parent="."]
visible = false
position = Vector2( 23, -11 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0.027451, 0.027451, 1 )
position = Vector2( -23, 5 )
shape = SubResource( 57 )

[node name="Timer" type="Timer" parent="."]

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="area_check" to="." method="_on_area_check_body_entered"]
[connection signal="body_exited" from="area_check" to="." method="_on_area_check_body_exited"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
